rtsp-stream: plug socket leak

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=688703